syntax = "proto3";

message Empty {}

message Task {
    string _id = 1;
    string label = 2;
}

message SuccessRes {
    bool status = 1;
}

message Id{
    string _id = 1;
}

message TaskList {
    repeated Task tasks = 1;
}

service GetTaskService {
    rpc GetTask (Empty) returns(TaskList);
    rpc CreateTask (Task) returns(Task);
    rpc UpdateTask (Task) returns(SuccessRes);
    rpc DeleteTask (Id) returns (SuccessRes);
}
